--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ Django==5.0.1
 djlint==1.34.1
 EditorConfig==0.12.4
 fonttools==4.49.0
+gunicorn==22.0.0
+h11==0.14.0
 html-tag-names==0.1.2
 html-void-elements==0.1.0
 joblib==1.3.2
@@ -39,3 +41,4 @@ threadpoolctl==3.3.0
 tqdm==4.66.2
 typing_extensions==4.9.0
 tzdata==2024.1
+uvicorn==0.30.1
