--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+Brotli==1.1.0
 click==8.1.7
 colorama==0.4.6
 contourpy==1.2.0
@@ -42,3 +43,4 @@ tqdm==4.66.2
 typing_extensions==4.9.0
 tzdata==2024.1
 uvicorn==0.30.1
+whitenoise==6.6.0
